stuck on CORS issue, will pick up tomorrow. image opens in others browser tabs but not on this page. Added backgroudn accent color to housing location component cards.

--- a/src/app/housing-location/housing-location.component.css
+++ b/src/app/housing-location/housing-location.component.css
@@ -3,7 +3,7 @@
 }
 
 .listing {
-  background: var(--accent-color);
+  background: var(--accent-color, lightblue);
   border-radius: 30px;
   padding-bottom: 30px;
 }
